# isi_05_oop_advanced

./: .gitignore  README.md  app.py  pyproject.toml  spec.md  wymagania.md
src/models/: __init__.py  domain.py  dtos.py  enums.py  mappers.py
src/repositories/: __init__.py  base.py  tvmaze.py
src/services/: __init__.py  filters.py  library.py  tv_service.py
src/ui/: __init__.py  display.py  input.py  interface.py  menu.py
src/utils/: __init__.py  exceptions.py
tests/: conftest.py
tests/test_models/: test_mappers.py
tests/test_services/: test_filters.py  test_library.py  test_tv_service.py
