[project]
name = "tv-series"
version = "0.1.0"
description = ""
authors = [
    {name = "Piotr Iwaniec",email = "piotrek.iwn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "questionary (>=2.1.1,<3.0.0)",
    "rich (>=14.2.0,<15.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyterlab (>=4.5.1,<5.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
